--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "execa": "latest",
-    "node-sass": "^4.9.0",
+    "node-sass": "6",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
